# OpenCut

./: Cargo.toml  package.json
apps/web/: package.json
apps/web/content/changelog/: 0.3.0.md
apps/web/src/app/projects/: page.tsx
apps/web/src/components/: editable-timecode.tsx
apps/web/src/components/providers/: editor-provider.tsx
apps/web/src/core/: index.ts
apps/web/src/core/managers/: audio-manager.ts  commands.ts  diagnostics-manager.ts  playback-manager.ts  project-manager.ts  renderer-manager.ts  timeline-manager.ts
apps/web/src/hooks/: use-paste-media.ts
apps/web/src/hooks/actions/: use-editor-actions.ts
apps/web/src/hooks/timeline/: use-bookmark-drag.ts  use-timeline-drag-drop.ts  use-timeline-playhead.ts  use-timeline-seek.ts  use-timeline-zoom.ts
apps/web/src/lib/: export.ts
apps/web/src/lib/animation/: curve-bridge.ts  interpolation.ts  keyframe-query.ts  keyframes.ts
apps/web/src/lib/fps/: constants.ts  utils.ts
apps/web/src/lib/media/: audio.ts  mediabunny.ts
apps/web/src/lib/project/: types.ts
apps/web/src/lib/ripple/: apply.ts  diff.ts  shift.ts
apps/web/src/lib/timeline/: audio-state.ts  bookmarks.ts  creation.ts  defaults.ts  drag-utils.ts  element-utils.ts  index.ts  pixel-utils.ts  ruler-utils.ts  (+3 more)
apps/web/src/stores/: keybindings-store.ts
rust/crates/effects/src/: pipeline.rs
rust/crates/gpu/: Cargo.toml
rust/crates/gpu/src/: context.rs
rust/crates/masks/src/: feather.rs  sdf.rs
rust/crates/time/: Cargo.toml
rust/crates/time/src/: time.rs
rust/wasm/: Cargo.toml
rust/wasm/src/: gpu.rs  wasm.rs
(+48 files in other folders)
